// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput.vue tests state messages any: should display the correct state message 1`] = `
<div class="stateMsg text-center">

</div>
`;

exports[`SearchInput.vue tests state messages error: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  Error connecting to OpenProject
</div>
`;

exports[`SearchInput.vue tests state messages no-token: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  No OpenProject account connected
</div>
`;

exports[`SearchInput.vue tests work packages multiselect search list should display correct options list of search results 1`] = `
<div class="searchList">
  <div class="searchList__filterWorkPackage">
    <div class="filterProjectTypeStatus">
      <div class="filterProjectTypeStatus__project">
        test
      </div>
      <div class="filterProjectTypeStatus__type" style="color: red;">
        task
      </div>
      <div class="filterProjectTypeStatus__status" style="background-color: blue;">
        <div class="filterProjectTypeStatus__status__title">
          in-progress
        </div>
      </div>
    </div>
    <div class="filterAssignee">
      <div class="filterAssignee__avatar">
        <avatar-stub url="/server/index.php/apps/integration_openproject/avatar?userId=1&amp;userName=System" user="test" showuserstatus="true" showuserstatuscompact="true" displayname="test" size="25" allowplaceholder="true" menuposition="center" menucontainer="body" class="item-avatar"></avatar-stub>
      </div>
      <div class="filterAssignee__assignee">
        test
      </div>
    </div>
  </div>
  <div class="filterWorkpackageSubject">
    <div class="filterWorkpackageSubject__subject">
      Organize work-packages
    </div>
  </div>
</div>
`;
